--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:password@localhost:5432/foodie-pos-2?schema=public"
+DATABASE_URL="postgresql://postgres:password@localhost:5432/testdb?schema=public"
 GOOGLE_CLIENT_ID=441865092842-emgvvmjqashlj7ikgh10vip6a3pg3a9a.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_SECRET=JFDHkjkjsjJjh21121jkjk22@!^dkjfj23K
